<resources>
    <string name="app_name">ManyField</string>
    <string name="greet">Welcome to my App!</string>
    <string name="sayhello">Hello, $s</string>
    <string name="clear">Clear</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="provide_your_name">Provide your name:</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="do_agree_to_our_t_c"><![CDATA[Do agree to our T&C]]></string>
    <string name="i_accept_t_c"><![CDATA[I accept T&C]]></string>
    <string name="send_promotional_mails">Send promotional mails</string>
</resources>